--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
     <packaging>jar</packaging>
     <name>Crashbooks</name>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.8.RELEASE</version>
+    </parent>
+
+
     <properties>
         <version.java>1.8</version.java>
         <version.eclipselink>2.6.2</version.eclipselink>
