--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,12 @@
             <version>5.2.10.Final</version>
         </dependency>-->
 
-        <dependency>
+<!--        <dependency> TODO maybe we ll need it or not
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${version.junit}</version>
             <scope>test</scope>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
@@ -62,11 +62,11 @@
             <version>2.8.2</version>
         </dependency>
 
-        <dependency>
+<!--        <dependency> TODO maybe we ll need it or not
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>RELEASE</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.mindrot</groupId>
@@ -74,12 +74,13 @@
             <version>0.4</version>
         </dependency>
 
-        <dependency>
+<!--        <dependency> TODO maybe we ll need it or not
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>2.12.0</version>
             <scope>test</scope>
-        </dependency>
+        </dependency>-->
+
         <!-- The versions of these dependencies are defined by the spring-boot-dependencies pom in the parent pom -->
         <!-- Spring boot + web package + Thymeleaf support -->
         <dependency>
@@ -113,6 +114,11 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20171018</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.0.0</version>
         </dependency>
     </dependencies>
     <build>
